--- a/.github/workflows/plone-package.yml
+++ b/.github/workflows/plone-package.yml
@@ -13,10 +13,15 @@ jobs:
     build:
         runs-on: ubuntu-latest
         strategy:
-            fail-fast: false
-            matrix:
-                python-version: [3.7, 3.8, 3.9, 2.7]
-
+          fail-fast: false
+          matrix:
+            include:
+              - python-version: 3.9
+                plone-version: 52
+              - python-version: 2.7
+                plone-version: 52
+              - python-version: 2.7
+                plone-version: 51
         steps:
             - uses: actions/checkout@v2
             - uses: actions/cache@v2
@@ -25,9 +30,7 @@ jobs:
                     ~/.cache/pip
                     ~/buildout-cache
                     ~/extends
-                  key: ${{ runner.os }}-tox-${{ hashFiles('**/setup.py') }}-${{ hashFiles('**/requirements.txt') }}-${{ hashFiles('**/tox.ini') }}
-                  restore-keys: |
-                    ${{ runner.os }}-tox-
+                  key: ${{ runner.os }}-deps-cache-${{ hashFiles('**/setup.py') }}-${{ hashFiles('**/requirements.txt') }} }}
             - name: Set up Python ${{ matrix.python-version }}
               uses: actions/setup-python@v2
               with:
@@ -42,9 +45,6 @@ jobs:
                   echo "download-cache = $HOME/buildout-cache/downloads" >> $HOME/.buildout/default.cfg
                   echo "eggs-directory = $HOME/buildout-cache/eggs" >> $HOME/.buildout/default.cfg
             - name: Install dependencies
-              run: |
-                  python -m pip install --upgrade pip
-                  pip install tox tox-gh-actions
-            - name: Test with tox
-              run: |
-                  tox -r
+              run: python -m pip install --upgrade pip && python -m pip install -r requirements.txt
+            - name: Run buildout
+              run: buildout -c test_plone${{ matrix.plone-version }}.cfg
