--- a/test_plone52.cfg
+++ b/test_plone52.cfg
@@ -11,3 +11,7 @@ update-versions-file = test_plone52.cfg
 plone.testing = 7.0.1
 collective.recipe.vscode = >=0.1.6
 importlib-metadata = 1.1.3
+
+# Added by buildout at 2022-06-13 17:58:12.065991
+collective.recipe.vscode = 0.1.8
+createcoverage = 1.5
