--- a/.github/workflows/plone-package.yml
+++ b/.github/workflows/plone-package.yml
@@ -4,47 +4,47 @@
 name: Plone package
 
 on:
-    push:
-        branches: [main]
-    pull_request:
-        branches: [main]
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
 
 jobs:
-    build:
-        runs-on: ubuntu-latest
-        strategy:
-          fail-fast: false
-          matrix:
-            include:
-              - python-version: 3.9
-                plone-version: 52
-              - python-version: 2.7
-                plone-version: 52
-              - python-version: 2.7
-                plone-version: 51
-        steps:
-            - uses: actions/checkout@v2
-            - uses: actions/cache@v2
-              with:
-                  path: |
-                    ~/.cache/pip
-                    ~/buildout-cache
-                    ~/extends
-                  key: ${{ runner.os }}-deps-cache-${{ hashFiles('**/setup.py') }}-${{ hashFiles('**/requirements.txt') }} }}
-            - name: Set up Python ${{ matrix.python-version }}
-              uses: actions/setup-python@v2
-              with:
-                  python-version: ${{ matrix.python-version }}
-            - name: Install system libraries
-              run: sudo apt-get install libxml2-dev libxslt1-dev libjpeg-dev
-            - name: setup buildout cache
-              run: |
-                  mkdir -p ~/buildout-cache/{eggs,downloads}
-                  mkdir ~/.buildout
-                  echo "[buildout]" > $HOME/.buildout/default.cfg
-                  echo "download-cache = $HOME/buildout-cache/downloads" >> $HOME/.buildout/default.cfg
-                  echo "eggs-directory = $HOME/buildout-cache/eggs" >> $HOME/.buildout/default.cfg
-            - name: Install dependencies
-              run: python -m pip install --upgrade pip && python -m pip install -r requirements.txt
-            - name: Run buildout
-              run: buildout -c test_plone${{ matrix.plone-version }}.cfg
+  build:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - python-version: 3.9
+            plone-version: 52
+          - python-version: 2.7
+            plone-version: 52
+          - python-version: 2.7
+            plone-version: 51
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cache/pip
+            ~/buildout-cache
+            ~/extends
+          key: ${{ runner.os }}-deps-cache-${{ hashFiles('**/setup.py') }}-${{ hashFiles('**/*.cfg') }} }}
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install system libraries
+        run: sudo apt-get install libxml2-dev libxslt1-dev libjpeg-dev
+      - name: setup buildout cache
+        run: |
+          mkdir -p ~/buildout-cache/{eggs,downloads}
+          mkdir ~/.buildout
+          echo "[buildout]" > $HOME/.buildout/default.cfg
+          echo "download-cache = $HOME/buildout-cache/downloads" >> $HOME/.buildout/default.cfg
+          echo "eggs-directory = $HOME/buildout-cache/eggs" >> $HOME/.buildout/default.cfg
+      - name: Install pip and zc.buildout
+        run: python -m pip install --upgrade pip wheel zc.buildout setuptools -c constraints_plone${{ matrix.plone-version }}.txt
+      - name: Run buildout
+        run: buildout -c test_plone${{ matrix.plone-version }}.cfg
