--- a/test_plone52.cfg
+++ b/test_plone52.cfg
@@ -15,3 +15,17 @@ importlib-metadata = 1.1.3
 # Added by buildout at 2022-06-13 17:58:12.065991
 collective.recipe.vscode = 0.1.8
 createcoverage = 1.5
+
+# Added by buildout at 2022-06-13 11:43:37.627454
+zipp = 1.2.0
+
+# Added by buildout at 2022-06-13 15:32:40.430439
+beatbox = 32.1
+
+# Required by:
+# jazkarta.easyformplugin.salesforce==1.0a1
+Products.salesforcebaseconnector = 1.4
+
+# Required by:
+# jazkarta.easyformplugin.salesforce==1.0a1
+collective.easyform = 4.0.0
