--- a/.github/workflows/plone-package.yml
+++ b/.github/workflows/plone-package.yml
@@ -48,3 +48,5 @@ jobs:
         run: python -m pip install --upgrade pip wheel zc.buildout setuptools -c constraints_plone${{ matrix.plone-version }}.txt
       - name: Run buildout
         run: buildout -c test_plone${{ matrix.plone-version }}.cfg
+      - name: Run tests
+        run: bin/test
