--- a/test_plone51.cfg
+++ b/test_plone51.cfg
@@ -10,5 +10,6 @@ update-versions-file = test_plone51.cfg
 [versions]
 plone.testing = 5.1.1
 plone.schema = 1.2.1
+collective.easyform = 3.1.0
 collective.recipe.vscode = >=0.1.6
 PyJWT = <2.0.0a1
