--- a/test_plone52.cfg
+++ b/test_plone52.cfg
@@ -16,15 +16,11 @@ importlib-metadata = 1.1.3
 collective.recipe.vscode = 0.1.8
 createcoverage = 1.5
 
-# Added by buildout at 2022-06-13 11:43:37.627454
+# Added by buildout at 2022-06-16 10:53:47.701431
+Authlib = 0.15.5
+simple-salesforce = 0.75.3
+vcrpy = 3.0.0
 zipp = 1.2.0
-
-# Added by buildout at 2022-06-13 15:32:40.430439
-beatbox = 32.1
-
-# Required by:
-# jazkarta.easyformplugin.salesforce==1.0a1
-Products.salesforcebaseconnector = 1.4
 
 # Required by:
 # jazkarta.easyformplugin.salesforce==1.0a1
