--- a/.github/workflows/plone-package.yml
+++ b/.github/workflows/plone-package.yml
@@ -9,6 +9,10 @@ on:
   pull_request:
     branches: [main]
 
+env:
+  SALESFORCE_USERNAME: test@example.com
+  SALESFORCE_PASSWORD: bogus
+
 jobs:
   build:
     runs-on: ubuntu-latest
