--- a/src/jazkarta/easyformplugin/salesforce/tests/cassettes/basic.yaml
+++ b/src/jazkarta/easyformplugin/salesforce/tests/cassettes/basic.yaml
@@ -1,114 +1,151 @@
-interactions:
-- request:
-    body: !!python/unicode "<?xml version=\"1.0\" encoding=\"utf-8\" ?>\n        <env:Envelope\n
-      \               xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"\n                xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"\n
-      \               xmlns:env=\"http://schemas.xmlsoap.org/soap/envelope/\"\n                xmlns:urn=\"urn:partner.soap.sforce.com\">\n
-      \           <env:Header>\n                <urn:CallOptions>\n                    <urn:client>RestForce</urn:client>\n
-      \                   <urn:defaultNamespace>sf</urn:defaultNamespace>\n                </urn:CallOptions>\n
-      \           </env:Header>\n            <env:Body>\n                <n1:login
-      xmlns:n1=\"urn:partner.soap.sforce.com\">\n                    <n1:username>REDACTED</n1:username>\n
-      \                   <n1:password>REDACTED</n1:password>\n                </n1:login>\n
-      \           </env:Body>\n        </env:Envelope>"
-    headers:
-      Accept:
-      - '*/*'
-      Accept-Encoding:
-      - gzip, deflate
-      Connection:
-      - keep-alive
-      Content-Length:
-      - '893'
-      SOAPAction:
-      - login
-      User-Agent:
-      - python-requests/2.27.1
-      charset:
-      - UTF-8
-      content-type:
-      - text/xml
-    method: POST
-    uri: https://login.salesforce.com/services/Soap/u/38.0
-  response:
-    body:
-      string: !!python/unicode <?xml version="1.0" encoding="UTF-8"?><soapenv:Envelope
-        xmlns:soapenv="http://schemas.xmlsoap.org/soap/envelope/" xmlns="urn:partner.soap.sforce.com"
-        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"><soapenv:Body><loginResponse><result><metadataServerUrl>https://glicksoftware-dev-ed.my.salesforce.com/services/Soap/m/38.0/00D8a000003h4LM</metadataServerUrl><passwordExpired>false</passwordExpired><sandbox>false</sandbox><serverUrl>https://glicksoftware-dev-ed.my.salesforce.com/services/Soap/u/38.0/00D8a000003h4LM</serverUrl><sessionId>FAKE_SESSION</sessionId><userId>0058a00000KrMXuAAN</userId><userInfo><accessibilityMode>false</accessibilityMode><currencySymbol>$</currencySymbol><orgAttachmentFileSizeLimit>26214400</orgAttachmentFileSizeLimit><orgDefaultCurrencyIsoCode>USD</orgDefaultCurrencyIsoCode><orgDefaultCurrencyLocale>en_US</orgDefaultCurrencyLocale><orgDisallowHtmlAttachments>false</orgDisallowHtmlAttachments><orgHasPersonAccounts>false</orgHasPersonAccounts><organizationId>00D8a000003h4LMEAY</organizationId><organizationMultiCurrency>false</organizationMultiCurrency><organizationName>Glick
-        Software</organizationName><profileId>00e8a000002TVflAAG</profileId><roleId
-        xsi:nil="true"/><sessionSecondsValid>7200</sessionSecondsValid><userDefaultCurrencyIsoCode
-        xsi:nil="true"/><userEmail>david+plone@glicksoftware.com</userEmail><userFullName>David
-        Glick</userFullName><userId>0058a00000KrMXuAAN</userId><userLanguage>en_US</userLanguage><userLocale>en_US</userLocale><userName>david+plone@glicksoftware.com</userName><userTimeZone>America/Los_Angeles</userTimeZone><userType>Standard</userType><userUiSkin>Theme3</userUiSkin></userInfo></result></loginResponse></soapenv:Body></soapenv:Envelope>
-    headers:
-      cache-control:
-      - no-cache,must-revalidate,max-age=0,no-store,private
-      content-length:
-      - '1821'
-      content-type:
-      - text/xml; charset=utf-8
-      date:
-      - Thu, 16 Jun 2022 19:22:04 GMT
-      set-cookie:
-      - BrowserId=mpkL6-2pEeyEdXv5QZ9OAQ; domain=.salesforce.com; path=/; expires=Fri,
-        16-Jun-2023 19:22:04 GMT; Max-Age=31536000
-      vary:
-      - Accept-Encoding
-    status:
-      code: 200
-      message: OK
-- request:
-    body: !!python/unicode '{"LastName": "McTesterson"}'
-    headers:
-      Accept:
-      - '*/*'
-      Accept-Encoding:
-      - gzip, deflate
-      Connection:
-      - keep-alive
-      Content-Length:
-      - '27'
-      Content-Type:
-      - application/json
-      Cookie:
-      - BrowserId=mpkL6-2pEeyEdXv5QZ9OAQ
-      User-Agent:
-      - python-requests/2.27.1
-      X-PrettyPrint:
-      - '1'
-    method: POST
-    uri: https://glicksoftware-dev-ed.my.salesforce.com/services/data/v38.0/sobjects/Contact/
-  response:
-    body:
-      string: !!python/unicode "{\n  \"id\" : \"0038a00002uObOdAAK\",\n  \"success\"
-        : true,\n  \"errors\" : [ ]\n}"
-    headers:
-      cache-control:
-      - no-cache,must-revalidate,max-age=0,no-store,private
-      content-length:
-      - '71'
-      content-type:
-      - application/json;charset=UTF-8
-      date:
-      - Thu, 16 Jun 2022 19:22:04 GMT
-      location:
-      - /services/data/v38.0/sobjects/Contact/0038a00002uObOdAAK
-      set-cookie:
-      - CookieConsentPolicy=0:1; path=/; expires=Fri, 16-Jun-2023 19:22:04 GMT; Max-Age=31536000
-      - LSKey-c$CookieConsentPolicy=0:1; path=/; expires=Fri, 16-Jun-2023 19:22:04
-        GMT; Max-Age=31536000
-      sforce-limit-info:
-      - api-usage=10/15000
-      strict-transport-security:
-      - max-age=63072000; includeSubDomains
-      transfer-encoding:
-      - chunked
-      vary:
-      - Accept-Encoding
-      x-content-type-options:
-      - nosniff
-      x-robots-tag:
-      - none
-      x-xss-protection:
-      - 1; mode=block
-    status:
-      code: 201
-      message: Created
-version: 1
+{
+    "version": 1,
+    "interactions": [
+        {
+            "request": {
+                "body": "<?xml version=\"1.0\" encoding=\"utf-8\" ?>\n        <env:Envelope\n                xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"\n                xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"\n                xmlns:env=\"http://schemas.xmlsoap.org/soap/envelope/\"\n                xmlns:urn=\"urn:partner.soap.sforce.com\">\n            <env:Header>\n                <urn:CallOptions>\n                    <urn:client>RestForce</urn:client>\n                    <urn:defaultNamespace>sf</urn:defaultNamespace>\n                </urn:CallOptions>\n            </env:Header>\n            <env:Body>\n                <n1:login xmlns:n1=\"urn:partner.soap.sforce.com\">\n                    <n1:username>REDACTED</n1:username>\n                    <n1:password>REDACTED</n1:password>\n                </n1:login>\n            </env:Body>\n        </env:Envelope>",
+                "headers": {
+                    "Content-Length": [
+                        "893"
+                    ],
+                    "Accept-Encoding": [
+                        "gzip, deflate"
+                    ],
+                    "SOAPAction": [
+                        "login"
+                    ],
+                    "charset": [
+                        "UTF-8"
+                    ],
+                    "Accept": [
+                        "*/*"
+                    ],
+                    "User-Agent": [
+                        "python-requests/2.27.1"
+                    ],
+                    "Connection": [
+                        "keep-alive"
+                    ],
+                    "content-type": [
+                        "text/xml"
+                    ]
+                },
+                "method": "POST",
+                "uri": "https://login.salesforce.com/services/Soap/u/38.0"
+            },
+            "response": {
+                "status": {
+                    "message": "OK",
+                    "code": 200
+                },
+                "headers": {
+                    "content-length": [
+                        "1821"
+                    ],
+                    "set-cookie": [
+                        "BrowserId=hT26De2uEeyvDxvtNOG4-w; domain=.salesforce.com; path=/; expires=Fri, 16-Jun-2023 19:57:15 GMT; Max-Age=31536000"
+                    ],
+                    "vary": [
+                        "Accept-Encoding"
+                    ],
+                    "cache-control": [
+                        "no-cache,must-revalidate,max-age=0,no-store,private"
+                    ],
+                    "date": [
+                        "Thu, 16 Jun 2022 19:57:15 GMT"
+                    ],
+                    "content-type": [
+                        "text/xml; charset=utf-8"
+                    ]
+                },
+                "body": {
+                    "string": "<?xml version=\"1.0\" encoding=\"UTF-8\"?><soapenv:Envelope xmlns:soapenv=\"http://schemas.xmlsoap.org/soap/envelope/\" xmlns=\"urn:partner.soap.sforce.com\" xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"><soapenv:Body><loginResponse><result><metadataServerUrl>https://glicksoftware-dev-ed.my.salesforce.com/services/Soap/m/38.0/00D8a000003h4LM</metadataServerUrl><passwordExpired>false</passwordExpired><sandbox>false</sandbox><serverUrl>https://glicksoftware-dev-ed.my.salesforce.com/services/Soap/u/38.0/00D8a000003h4LM</serverUrl><sessionId>FAKE_SESSION</sessionId><userId>0058a00000KrMXuAAN</userId><userInfo><accessibilityMode>false</accessibilityMode><currencySymbol>$</currencySymbol><orgAttachmentFileSizeLimit>26214400</orgAttachmentFileSizeLimit><orgDefaultCurrencyIsoCode>USD</orgDefaultCurrencyIsoCode><orgDefaultCurrencyLocale>en_US</orgDefaultCurrencyLocale><orgDisallowHtmlAttachments>false</orgDisallowHtmlAttachments><orgHasPersonAccounts>false</orgHasPersonAccounts><organizationId>00D8a000003h4LMEAY</organizationId><organizationMultiCurrency>false</organizationMultiCurrency><organizationName>Glick Software</organizationName><profileId>00e8a000002TVflAAG</profileId><roleId xsi:nil=\"true\"/><sessionSecondsValid>7200</sessionSecondsValid><userDefaultCurrencyIsoCode xsi:nil=\"true\"/><userEmail>david+plone@glicksoftware.com</userEmail><userFullName>David Glick</userFullName><userId>0058a00000KrMXuAAN</userId><userLanguage>en_US</userLanguage><userLocale>en_US</userLocale><userName>david+plone@glicksoftware.com</userName><userTimeZone>America/Los_Angeles</userTimeZone><userType>Standard</userType><userUiSkin>Theme3</userUiSkin></userInfo></result></loginResponse></soapenv:Body></soapenv:Envelope>"
+                }
+            }
+        },
+        {
+            "request": {
+                "body": "{\"LastName\": \"McTesterson\"}",
+                "headers": {
+                    "Content-Length": [
+                        "27"
+                    ],
+                    "X-PrettyPrint": [
+                        "1"
+                    ],
+                    "Accept-Encoding": [
+                        "gzip, deflate"
+                    ],
+                    "Accept": [
+                        "*/*"
+                    ],
+                    "User-Agent": [
+                        "python-requests/2.27.1"
+                    ],
+                    "Connection": [
+                        "keep-alive"
+                    ],
+                    "Cookie": [
+                        "BrowserId=hT26De2uEeyvDxvtNOG4-w"
+                    ],
+                    "Content-Type": [
+                        "application/json"
+                    ]
+                },
+                "method": "POST",
+                "uri": "https://glicksoftware-dev-ed.my.salesforce.com/services/data/v38.0/sobjects/Contact/"
+            },
+            "response": {
+                "status": {
+                    "message": "Created",
+                    "code": 201
+                },
+                "headers": {
+                    "content-length": [
+                        "71"
+                    ],
+                    "x-xss-protection": [
+                        "1; mode=block"
+                    ],
+                    "x-robots-tag": [
+                        "none"
+                    ],
+                    "x-content-type-options": [
+                        "nosniff"
+                    ],
+                    "transfer-encoding": [
+                        "chunked"
+                    ],
+                    "set-cookie": [
+                        "CookieConsentPolicy=0:1; path=/; expires=Fri, 16-Jun-2023 19:57:16 GMT; Max-Age=31536000",
+                        "LSKey-c$CookieConsentPolicy=0:1; path=/; expires=Fri, 16-Jun-2023 19:57:16 GMT; Max-Age=31536000"
+                    ],
+                    "strict-transport-security": [
+                        "max-age=63072000; includeSubDomains"
+                    ],
+                    "vary": [
+                        "Accept-Encoding"
+                    ],
+                    "location": [
+                        "/services/data/v38.0/sobjects/Contact/0038a00002uObaKAAS"
+                    ],
+                    "cache-control": [
+                        "no-cache,must-revalidate,max-age=0,no-store,private"
+                    ],
+                    "date": [
+                        "Thu, 16 Jun 2022 19:57:16 GMT"
+                    ],
+                    "sforce-limit-info": [
+                        "api-usage=13/15000"
+                    ],
+                    "content-type": [
+                        "application/json;charset=UTF-8"
+                    ]
+                },
+                "body": {
+                    "string": "{\n  \"id\" : \"0038a00002uObaKAAS\",\n  \"success\" : true,\n  \"errors\" : [ ]\n}"
+                }
+            }
+        }
+    ]
+}
