test more field types; fix date serialization

--- a/src/jazkarta/easyformplugin/salesforce/tests/cassettes/basic.yaml
+++ b/src/jazkarta/easyformplugin/salesforce/tests/cassettes/basic.yaml
@@ -21,7 +21,7 @@
                         "*/*"
                     ],
                     "User-Agent": [
-                        "python-requests/2.24.0"
+                        "python-requests/2.27.1"
                     ],
                     "Connection": [
                         "keep-alive"
@@ -43,7 +43,7 @@
                         "1861"
                     ],
                     "set-cookie": [
-                        "BrowserId=lmkg_u24EeyuuE0E6892Cg; domain=.salesforce.com; path=/; expires=Fri, 16-Jun-2023 21:09:19 GMT; Max-Age=31536000"
+                        "BrowserId=nfl_7-5uEeyUrnv0V3A2tg; domain=.salesforce.com; path=/; expires=Sat, 17-Jun-2023 18:52:20 GMT; Max-Age=31536000"
                     ],
                     "vary": [
                         "Accept-Encoding"
@@ -52,7 +52,7 @@
                         "no-cache,must-revalidate,max-age=0,no-store,private"
                     ],
                     "date": [
-                        "Thu, 16 Jun 2022 21:09:19 GMT"
+                        "Fri, 17 Jun 2022 18:52:20 GMT"
                     ],
                     "content-type": [
                         "text/xml; charset=utf-8"
@@ -65,10 +65,10 @@
         },
         {
             "request": {
-                "body": "{\"LastName\": \"McTesterson\"}",
+                "body": "{\"Description\": \"Created by jazkarta.easyformplugin.salesforce tests\", \"FirstName\": null, \"LastName\": \"McTesterson\", \"Birthdate\": \"1985-09-30\", \"CreatedDate\": \"2022-06-17T18:52:20+00:00\", \"DoNotCall\": true}",
                 "headers": {
                     "Content-Length": [
-                        "27"
+                        "206"
                     ],
                     "X-PrettyPrint": [
                         "1"
@@ -80,13 +80,13 @@
                         "*/*"
                     ],
                     "User-Agent": [
-                        "python-requests/2.24.0"
+                        "python-requests/2.27.1"
                     ],
                     "Connection": [
                         "keep-alive"
                     ],
                     "Cookie": [
-                        "BrowserId=lmkg_u24EeyuuE0E6892Cg"
+                        "BrowserId=nfl_7-5uEeyUrnv0V3A2tg"
                     ],
                     "Content-Type": [
                         "application/json"
@@ -117,8 +117,8 @@
                         "chunked"
                     ],
                     "set-cookie": [
-                        "CookieConsentPolicy=0:1; path=/; expires=Fri, 16-Jun-2023 21:09:21 GMT; Max-Age=31536000",
-                        "LSKey-c$CookieConsentPolicy=0:1; path=/; expires=Fri, 16-Jun-2023 21:09:21 GMT; Max-Age=31536000"
+                        "CookieConsentPolicy=0:1; path=/; expires=Sat, 17-Jun-2023 18:52:21 GMT; Max-Age=31536000",
+                        "LSKey-c$CookieConsentPolicy=0:1; path=/; expires=Sat, 17-Jun-2023 18:52:21 GMT; Max-Age=31536000"
                     ],
                     "strict-transport-security": [
                         "max-age=63072000; includeSubDomains"
@@ -127,23 +127,23 @@
                         "Accept-Encoding"
                     ],
                     "location": [
-                        "/services/data/v55.0/sobjects/Contact/0038a00002uObzNAAS"
+                        "/services/data/v55.0/sobjects/Contact/0038a00002uOiPtAAK"
                     ],
                     "cache-control": [
                         "no-cache,must-revalidate,max-age=0,no-store,private"
                     ],
                     "date": [
-                        "Thu, 16 Jun 2022 21:09:21 GMT"
+                        "Fri, 17 Jun 2022 18:52:21 GMT"
                     ],
                     "sforce-limit-info": [
-                        "api-usage=15/15000"
+                        "api-usage=27/15000"
                     ],
                     "content-type": [
                         "application/json;charset=UTF-8"
                     ]
                 },
                 "body": {
-                    "string": "{\n  \"id\" : \"0038a00002uObzNAAS\",\n  \"success\" : true,\n  \"errors\" : [ ]\n}"
+                    "string": "{\n  \"id\" : \"0038a00002uOiPtAAK\",\n  \"success\" : true,\n  \"errors\" : [ ]\n}"
                 }
             }
         }
