--- a/test_plone52.cfg
+++ b/test_plone52.cfg
@@ -11,3 +11,15 @@ update-versions-file = test_plone52.cfg
 plone.testing = 7.0.1
 collective.recipe.vscode = >=0.1.6
 importlib-metadata = 1.1.3
+
+# Added by buildout at 2022-06-17 10:09:40.614785
+Authlib = 0.15.5
+collective.recipe.vscode = 0.1.8
+createcoverage = 1.5
+simple-salesforce = 0.75.3
+vcrpy = 3.0.0
+zipp = 1.2.0
+
+# Required by:
+# jazkarta.easyformplugin.salesforce==1.0a1
+collective.easyform = 4.0.0
