Add easyform action to create a new record in Salesforce (#1)
* add dependencies, boilerplate for new easyform action

* Run tests in GHA

* pin collective.easyform compatible with Plone 5.1

* implement basic create operation

* happy path functional test

* fix tests for Plone 5.1

* use simple-salesforce instead of salesforcebaseconnector/beatbox; test using vcr

* try to fix tests

* try to fix tests

* fix

* use explicit Salesforce API version

* fix syntax

* update cassette

* fix

* docstrings

* fix

* test more field types; fix date serialization

* try to require conditional dependencies using environment markers

* why is it not equal?

* fix comparing today's date to the date the vcr cassette was recorded

--- a/test_plone51.cfg
+++ b/test_plone51.cfg
@@ -10,5 +10,44 @@ update-versions-file = test_plone51.cfg
 [versions]
 plone.testing = 5.1.1
 plone.schema = 1.2.1
+collective.easyform = 3.1.0
 collective.recipe.vscode = >=0.1.6
+cryptography = 3.3.2
 PyJWT = <2.0.0a1
+PyOpenSSL = <22
+PyYAML = <6
+
+# Added by buildout at 2022-06-16 13:53:45.655214
+Authlib = 0.15.5
+PyYAML = 5.4.1
+cffi = 1.15.0
+collective.recipe.vscode = 0.1.8
+createcoverage = 1.5
+pathtools = 0.1.2
+pbr = 5.9.0
+pkginfo = 1.8.3
+pyOpenSSL = 21.0.0
+readme-renderer = 35.0
+requests-toolbelt = 0.9.1
+simple-salesforce = 0.75.3
+vcrpy = 3.0.0
+
+# Required by:
+# cryptography==3.3.2
+ipaddress = 1.0.23
+
+# Required by:
+# bleach==3.3.1
+packaging = 21.3
+
+# Required by:
+# cffi==1.15.0
+pycparser = 2.21
+
+# Required by:
+# bleach==3.3.1
+webencodings = 0.5.1
+
+# Required by:
+# vcrpy==3.0.0
+wrapt = 1.14.1
