--- a/.github/workflows/plone-package.yml
+++ b/.github/workflows/plone-package.yml
@@ -9,6 +9,11 @@ on:
   pull_request:
     branches: [main]
 
+env:
+  SALESFORCE_USERNAME: test@example.com
+  SALESFORCE_PASSWORD: bogus
+  SALESFORCE_TOKEN: bogus
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -48,3 +53,5 @@ jobs:
         run: python -m pip install --upgrade pip wheel zc.buildout setuptools -c constraints_plone${{ matrix.plone-version }}.txt
       - name: Run buildout
         run: buildout -c test_plone${{ matrix.plone-version }}.cfg
+      - name: Run tests
+        run: bin/test
